# tdd_projeto

./: .env  .pre-commit-config.yaml  docker-compose.yml  lista_comandos.txt  pyproject.toml
store/: main.py
store/core/: config.py
