[project]
name = "tdd-projeto"
version = "0.0.1"
description = ""
authors = [
    {name = "alan-a-santos",email = "alan-a@uol.com.br"}
]

packages = [
  { include = "tdd_projeto" }  # nome da pasta com underline, sem hífen
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
